SAK-17657
git-svn-id: https://source.sakaiproject.org/svn/jobscheduler/trunk@70977 66ffb92e-73f9-0310-93c1-f5514f145a0a